* 変更点一覧

** 2.5.0-dev

*** features

- 配列のフォームをvalidateする際、値がnullだとフィルタが適用されないバグを修正
- Ethna_Renderer_Rhacoを追加(experimental)
- Ethna_DB_ADOdbのdebug時のログ出力をEthnaのLoggerに変更(@see http://d.hatena.ne.jp/sotarok/20071224)
- Ethna_Plugin_Cachemanager_Memcache に引数がなかったためにプラグイン呼び出しに失敗していたバグを修正(thanks sfio, ethna-users:0818)
- Ethna_PearWrapper、Ethna_Plugin_Csrf_Session, Ethna_InfoManager 等を微調整(thanks sfio, ethna-users:0825)
- form_input の default 属性が、入力値で上書きできなかったバグを修正(thanks sotarok, ethna-users:0836)

** 2.3.2

*** features

- %%[breaking B.C.]%% Ethna_UrlHandler (URLハンドラ) をプラグイン化
-- Ethna_Plugin_Urlhandler_Default を追加
-- %% $action_map を App_Urlhandler から App_Plugin_Urlhandler_Default
に移動する必要があります %%
-- やっぱり戻しました。プラグインを呼び出したいときにApp_UrlHandlerクラスで指定するように変更。
- プラグインのクラスが既に存在する場合は特別にファイルの検索をスキップするようにした。
- Ethna_ViewClass::_getFormInput_* で $separator のデフォルトを '' から "\n" に変更
- Ethna_Controller::_trigger_XMLRPC で $GLOBALS['HTTP_RAW_POST_DATA'] を使わずに 'php://input' を使うように変更
-- php.ini の設定が不要になりました。
- Ethna_MailSender
-- $type 引数を $template と rename して、より積極的にテンプレート名と解釈するようにした。
--- $def を特に指定しなければ ViewClass の forward_name と同様に template/ja/mail/ 以下からテンプレートを探します。
-- multipart: 2 つ以上の添付、ファイル名を指定した添付に対応しました。
--- ただしデフォルトの content-type は application/octet-stream でごまかしているのと、日本語ファイル名がてきとうです。
- Ethna_Renderer, Ethna_Renderer_Smarty
-- perform() の第2引数に $capture フラグを追加
-- true のときは Smarty 的に display でなく fetch になります。
- Ethna_Util::isRootDir() 追加
- ethna_make_packageで.svnに対応
- Ethna_Plugin_Validator_Mbregexp　追加 (thx: mumumu)
-- mb_eregを使ったマルチバイト対応正規表現プラグイン
- Ethna_Plugin_Handle_PearLocal　追加 
-- PEARパッケージを各プロジェクト毎に管理できるプラグイン
- View のユニットテストができなくなっていたバグを修正(thx: sfio, ethna-users:0651)

*** bug fixes

- raiseError()類の引数が間違っていたのを修正 (thx: sfio)
- プラグインパッケージインストール時に '{$application_id}' が置換されないバグを修正
- add-template が正しく動作していなかったのを修正
- Ethna_ViewClass::_getFormInput_Select で multiple を考慮していなかったのを修正
- Ethna_AppObject::_getSQL_SearchId で救済になってないエラーのスキップを削除
-- 有効な key がないときに、どちらにしろ SQL エラーになってた