@@ -7,15 +7,35 @@
 #   $Id: ethna.sh 439 2007-01-04 06:23:15Z ichii386 $
 #
 
+CUR_DIR="$PWD"
+
 if test -z "$ETHNA_HOME"
 then
-    if test "@PEAR-DIR@" = '@'PEAR-DIR'@'
-    then
-        ETHNA_HOME="/usr/share/php/Ethna"
-    else
-        ETHNA_HOME="@PEAR-DIR@/Ethna"
-    fi
+    while [ 1 ];
+    do
+        if test -f ".ethna"
+        then
+            if test -d "$PWD""/lib/Ethna"
+            then
+                ETHNA_HOME="$PWD""/lib/Ethna"
+                break
+            fi
+        fi
+        if [ "$PWD" = "/" ];
+        then
+            if test "@PEAR-DIR@/pear" = '@'PEAR-DIR'@'
+            then
+                ETHNA_HOME="/usr/share/php/Ethna"
+            else
+                ETHNA_HOME="@PEAR-DIR@/Ethna"
+            fi
+            break
+        fi
+        cd ..
+    done
 fi
+
+cd $CUR_DIR
 
 if test -z "$PHP_COMMAND"
 then
@@ -23,7 +43,7 @@ then
     then
         PHP_COMMAND="php"
     else
-        PHP_COMMAND="@PHP-BIN@/php"
+        PHP_COMMAND="@PHP-BINARY@"
     fi
     export PHP_COMMAND
 fi
